--- a/vignettes/Session_1_sequencing_assays.Rmd
+++ b/vignettes/Session_1_sequencing_assays.Rmd
@@ -27,7 +27,7 @@ data acquisition, and basic data manipulation and visualization.
 
 ### Session Structure
 
-**1. Introduction to Bioconductor**
+**Introduction to Bioconductor**
 
 What is Bioconductor?
 Its role in spatial omics analysis.
